# rbgcpp2py

./: .gitmodules  CMakeLists.txt  README.md  bindings.cc  utils.py
scripts/: create_game_library.sh  test.sh
tests/: breakthrough_perft_test.py  run_tests.sh
